# cam-capture-client

./: README.md  pyproject.toml
cam_capture_client/: __init__.py  cam_capture.py  main.py
cam_capture_client/common/: __init__.py  default.py  find_cam.sh  logger.py  utils.py
cam_capture_client/config/: config.yaml  logger.json
