[tool.poetry]
name = "cam-capture-client"
version = "0.1.0"
description = ""
authors = ["송승관 <yanhis97531@gmail.com>"]
readme = "README.md"
packages = [{include = "cam_capture_client"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
