[tool.poetry]
name = "cam-capture-client"
version = "0.1.0"
description = ""
authors = ["송승관 <yanhis97531@gmail.com>"]
readme = "README.md"
packages = [{include = "cam_capture_client"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
fvcore = "^0.1.5.post20221221"
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
